commit: fixed issues with dark mode using chrome

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,15 +18,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-
   border-radius: 25px;
-
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: white;
 }
 
 .mask {
@@ -52,6 +45,21 @@ body {
 .maskSkeletonMovie {
   -webkit-mask-image: linear-gradient(black, transparent 100%);
   mask-image: linear-gradient(black, transparent 160%);
+}
+
+@keyframes dropIn {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.drop-in {
+  animation: dropIn 0.5s ease-out;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
